# TradeSentient

./: .env.example  .gitignore  DEPLOYMENT_QUICK_START.md  LICENSE  Procfile  README.md  SECURITY.md  backtest.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/: database.py  forex.py  main.py  models.py  schemas.py  security.py  signals.py  ticker_config.py
frontend/: .env.example  Dockerfile  build_errors.txt  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
frontend/public/animations/: header.lottie  header.webm  loading.lottie  loading.webm
frontend/src/: App.jsx  index.css
frontend/src/components/: LoadingPage.jsx  MarketChart.jsx  PricePage.jsx  SentimentFeed.jsx  SignalPanel.jsx  StatsBar.jsx
frontend/src/hooks/: useWebSocket.js
worker/: Dockerfile  celery_app.py  ingest_script.py  tasks.py
